#572 wri_sites: center on tablet, fix offsite.

--- a/themes/custom/ts_wrin/sass/components/_programs.scss
+++ b/themes/custom/ts_wrin/sass/components/_programs.scss
@@ -418,5 +418,8 @@
   @extend .btn--sm;
 }
 .callout--node .field--name-field-callout-summary a {
-  @apply py-2 px-4;
+  @apply py-2 px-4 inline-block;
+}
+.callout--node .field--name-field-callout-summary a.button.offsite.small::after {
+  background-position: center -3px;
 }
